--- a/css/style.css
+++ b/css/style.css
@@ -575,9 +575,9 @@
 }
 
 .cta *:focus {
-  outline: none;
+  /* outline: none; */
   outline-offset: 8px;
-  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+  /* box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5); */
 }
 
 /***************************************/
